--- a/index.html
+++ b/index.html
@@ -5,7 +5,17 @@
   <title>Excursion</title>
 </head>
 <body>
-  <h1 id="header">Discover hidden places in the world around you</h1>
-  <p class="link"><a href="#header" class="link">Download Excursion (Coming soon!)<a></p>
+  <div><h1 id="header">Discover hidden places in the world around you</h1></div>
+  <div class="link"><p ><a href="#header" class="link">Download Excursion (Coming soon!)<a></p></div>
+    <video><source src="./resources/videos/excursion.mp4"> Your browser does not support the video tag.</video>
+
+  <h2>Your personal travel guide</h2>
+  <p class="inhalt">Excursion remebers places you like, and recommends new points of interest around you.</p>
+  <div><img src="./resources/images/camp.jpg"/></div>
+  <br/>
+  <div><img src="./resources/images/phone.png"/></div>
+  <div><h2>Coming soon for iPhone and Android</h2></div>
+  <div class="link"><p ><a href="#header" class="link">Download Excursion (Coming soon!)<a></p></div>
+    <div id="footer"><p>© Excursion</p>
 </body>
 </html>
