--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <video><source src="./resources/videos/excursion.mp4"> Your browser does not support the video tag.</video>
 
   <h2>Your personal travel guide</h2>
-  <p class="inhalt">Excursion remebers places you like, and recommends new points of interest around you.</p>
+  <p class="inhalt">Excursion remembers places you like, and recommends new points of interest around you.</p>
   <div><img src="./resources/images/camp.jpg"/></div>
   <br/>
   <div><img src="./resources/images/phone.png"/></div>
